...
  @override
  Widget build(BuildContext context) {
    return SafeArea(
      child: ListView(
        padding: const EdgeInsets.all(20),
        children: [
          Text('Pengaturan', style: AppTheme.heading(fontSize: 24)),
          const SizedBox(height: 16),
          ListTile(
            leading: const Icon(Icons.palette_rounded),
            title: Text('Tema & Background', style: AppTheme.body()),
          ),
          ListTile(
...
