...
                                child: Row(
                                  mainAxisAlignment: MainAxisAlignment.center,
                                  children: [
                                    const OpenMojiIcon(AppIcons.magic, size: 24),
                                    const SizedBox(width: 8),
                                    Text(
                                      'Generate Data Dummy',
                                      style: AppTheme.body(fontSize: 13, fontWeight: FontWeight.bold, color: AppColors.accent),
                                    ),
                                  ],
                                ),
                              ),
                            ),
...
