appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Rangkuman"
- waitForAnimationToEnd
- tapOn: "Harian"
- waitForAnimationToEnd
- takeScreenshot: qa-summarytabs-01-harian
- tapOn: "Tahunan"
- waitForAnimationToEnd
- takeScreenshot: qa-summarytabs-02-tahunan
